<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UEP Abso Jam</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Validators -->
    <string name="validator_field_required">To pole jest wymagane!</string>
    <string name="guardian_profile_validate_empty_email">Pole E-mail nie może być puste</string>
    <string name="guardian_profile_validate_email">Pole E-mail nie jest odpowiedniego formatu</string>

    <!-- Actions -->
    <string name="action_users">Użytkownicy</string>
    <string name="action_join">Dołącz</string>
    <string name="action_logout">Wyloguj</string>
    <string name="action_add">Dodaj</string>

    <!-- Login/Register -->
    <string name="login_fragment_email_login">ZWYKŁE LOGOWANIE</string>
    <string name="login_fragment_linkdin_login">ZALOGUJ Z LINKEDIN</string>
    <string name="login_fragment_repeat_pasword_hint">Powtórz hasło</string>
    <string name="login_fragment_create_account_link">Załóż konto</string>
    <string name="login_fragment_reset_password_link">Przywróć hasło</string>
    <string name="login_fragment_submit_login">Zaloguj się</string>
    <string name="login_fragment_accept_regulamin">Zaakceptuj regulamin</string>
    <string name="login_fragment_submit_registration">Zarejestruj się</string>
    <string name="login_uep_apso">UEP\nAPSO JAM</string>
    <string name="login_uep_apso_content">Dołącz do kreatywnego zespołu i zmierz się\nz wyzwaniami</string>

    <!-- Jams -->
    <string name="jam_menu_item_details">Szczegóły</string>
    <string name="jam_menu_item_accept">Zaakceptuj</string>
    <string name="jam_menu_item_reject">Odrzuć</string>
    <string name="jam_menu_item_evaluation">Oceń</string>
    <string name="jam_menu_item_take_apart">Weź udział</string>
    <string name="jam_edit_name">Nazwa jamu</string>
    <string name="jam_edit_description">Opis</string>
    <string name="jam_edit_when">Kiedy</string>
    <string name="jam_edit_place">Miejsce spotkania</string>
    <string name="jam_edit_street">Ulica</string>
    <string name="jam_edit_number">Numer</string>
    <string name="jam_edit_city">Miasto</string>
    <string name="jam_edit_number_of_people">Ilość osób</string>
    <string name="name"></string>

    <string-array name="jams_filter">
        <item>Weźmiesz udział</item>
        <item>Brałeś udział</item>
        <item>Zorganizowałeś</item>
    </string-array>

    <!-- Jam Details -->
    <string name="when">Kiedy: </string>
    <string name="where">Gdzie: </string>
    <string name="users">Ilość osób: </string>

    <!-- Jam Rate -->
    <string name="rate_organize_text">Organizacja: </string>
    <string name="rate_topic_text">Tematyka: </string>
    <string name="rate_effect_text">Efekt: </string>
    <string name="time">Godzina</string>
    <string name="date">Data</string>

    <string-array name="jams_gone">
        <item>Stworzenie nowej metodologii we wdrażaniu procesów w firmach. </item>
        <item>Przeniesienie produkcji do Chin, bo tutaj za drogo. Zaplanowanie całości przedsięwzięcia i koordynacja.</item>
        <item>Wyimaginowany przyjaciel, jak z tym żyć.</item>
        <item>Kajakiem przez świat, co zabrać ze sobą prócz kajaka?</item>
        <item>Build your awesome app. The best JAM ever.</item>
        <item>Pomóż uratować lasy deszczone.</item>
        <item>Design thinking. Stwórz z nami nasz nowy produkt - WBK.</item>
        <item>Stwórzmy scenariusz gry planszowej, mam zarys pomysłu.</item>
    </string-array>
    <string-array name="users">
        <item>Borys Jelcyn</item>
        <item>Król Julian</item>
        <item>Michał Bielak</item>
        <item>Salvador Dali</item>
        <item>Ryszard Rynkowski</item>
        <item>Donald Złodziej</item>
        <item>Mis Jogi</item>
        <item>Emmanuel Olisadebe</item>
        <item>Krzysztod Krawczyk</item>
    </string-array>
    <string-array name="jams_future">
        <item>Build your awesome app. The best JAM ever.</item>
        <item>Pomóż uratować lasy deszczone.</item>
        <item>Design thinking. Stwórz z nami nasz nowy produkt - WBK.</item>
        <item>Stwórzmy scenariusz gry planszowej, mam zarys pomysłu.</item>
        <item>Stworzenie nowej metodologii we wdrażaniu procesów w firmach. </item>
        <item>Przeniesienie produkcji do Chin, bo tutaj za drogo. Zaplanowanie całości przedsięwzięcia i koordynacja.</item>
        <item>Wyimaginowany przyjaciel, jak z tym żyć.</item>
        <item>Kajakiem przez świat, co zabrać ze sobą prócz kajaka?</item>
    </string-array>
    <string-array name="jams_organized">
        <item>Kajakiem przez świat, co zabrać ze sobą prócz kajaka?</item>
        <item>Rozmyślanie nad istotą życia. </item>
        <item>Nowa deskorolka czy nowy snowboard. Jak stworzyć firmę event’ową?</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
