<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_frame"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/abso_list_background"
    android:clickable="true"
    android:orientation="vertical">

    <include layout="@layout/cancel_save_buttons" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/edit_text_title"
                android:layout_marginTop="@dimen/text_view_margin_top"
                android:text="@string/jam_edit_name" />

            <EditText
                android:id="@+id/jam_name"
                style="@style/edit_text"
                android:background="@drawable/edit_text_selector" />

            <TextView
                style="@style/edit_text_title"
                android:layout_marginTop="20dp"
                android:text="@string/jam_edit_description" />

            <EditText
                android:id="@+id/jam_description"
                style="@style/edit_text"
                android:background="@drawable/edit_text_selector" />


            <TextView
                android:layout_marginTop="20dp"
                style="@style/edit_text_title"
                android:text="@string/jam_edit_when" />



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/image_padding_bottom"
                    android:layout_marginLeft="@dimen/image_padding"
                    android:layout_marginRight="@dimen/image_padding"
                    android:src="@drawable/calendar_text" />

                <LinearLayout
                    android:id="@+id/test"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/edit_text_title"
                        android:layout_width="fill_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_view_margin_top"
                        android:text="@string/time" />

                    <EditText
                        android:id="@+id/edit_measure_time"
                        style="@style/edit_text"
                        android:layout_marginRight="@dimen/image_padding"
                        android:background="@drawable/edit_text_selector"
                        android:focusable="false"
                        android:inputType="time"
                        android:longClickable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/edit_text_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_view_margin_left"
                        android:layout_marginTop="@dimen/text_view_margin_top"
                        android:text="@string/date" />

                    <EditText
                        android:id="@+id/edit_measure_date"
                        style="@style/edit_text"
                        android:layout_marginLeft="@dimen/image_padding"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_selector"
                        android:focusable="false"
                        android:inputType="date"
                        android:longClickable="false" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                style="@style/header"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="25dp"
                android:text="@string/jam_edit_place" />


            <TextView
                android:layout_marginTop="@dimen/text_view_margin_top"
                style="@style/edit_text_title"
                android:text="@string/jam_edit_street" />

            <EditText
                android:id="@+id/jam_street"
                style="@style/edit_text"
                android:background="@drawable/edit_text_selector"
                android:textColorHint="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="9"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/edit_text_title"
                        android:text="@string/jam_edit_number" />

                    <EditText
                        android:id="@+id/jam_address_number"
                        style="@style/edit_text_number"
                        android:background="@drawable/edit_text_selector" />

                    </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/edit_text_title"
                        android:text="@string/jam_edit_city" />

                    <EditText
                        android:paddingBottom="@dimen/text_view_padding_bottom"
                        android:id="@+id/jam_address_city"
                        style="@style/edit_text"
                        android:background="@drawable/edit_text_selector" />

                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                style="@style/edit_text_title"
                android:text="@string/jam_edit_number_of_people" />

            <EditText
                android:id="@+id/jam_person_number"
                style="@style/edit_text_number_decimal"
                android:background="@drawable/edit_text_selector"
                android:inputType="number"
                android:textColorHint="@android:color/darker_gray"
                android:layout_marginBottom="50dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

