<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.redexperts.uepabsojam.fragments.FragmentJamDetails"
    android:orientation="vertical">



    <include layout="@layout/cancel_save_buttons"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text Large Text Large Text Large Text Large Text Large Text Large Text Large"
        android:id="@+id/jamTitle"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:paddingBottom="20dp"
        android:textAlignment="center" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/when"
            android:id="@+id/jamWhen"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/when"
            android:id="@+id/jamWhenValue"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:layout_toEndOf="@id/jamWhen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/where"
            android:id="@+id/jamWhere"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:layout_below="@+id/jamWhen"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/where"
            android:id="@+id/jamWhereValue"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:layout_below="@+id/jamWhen"
            android:layout_toRightOf="@+id/jamWhere"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/users"
            android:id="@+id/jamUsers"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="20dp"
            android:layout_below="@+id/jamWhere"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/users"
            android:id="@+id/jamUsersValue"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="20dp"
            android:layout_below="@+id/jamWhere"
            android:layout_toRightOf="@+id/jamUsers"/>

    </RelativeLayout>




    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="text text text text text text text text text text text text text text text text text text text text text text text text text text "
            android:id="@+id/jamDelails"
            android:paddingTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="20dp"/>



    </LinearLayout>

</ScrollView>